--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: blockchain
     ports:
-      - '5555:5432'
+      - '5432:5432'
   crawler:
     image: wavesplatform/blockchain-postgres-sync
     restart: always
@@ -23,3 +23,22 @@ services:
       PGUSER: 'postgres'
       PGPASSWORD: 'postgres'
       MIGRATE: 'true'
+  data-service:
+    image: wavesplatform/data-service
+    restart: always
+    depends_on:
+      - crawler
+    environment:
+      PORT: 3000
+      PGHOST: postgres
+      PGPORT: 5432
+      PGDATABASE: blockchain
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      PGPOOLSIZE: 20
+      LOG_LEVEL: info
+      # default matcher for mainnet
+      DEFAULT_MATCHER: 3PJaDyprvekvPXPuAtxrapacuDJopgJRaU3
+      MATCHER_SETTINGS_URL: https://matcher.wavesplatform.com/matcher/settings
+    ports:
+      - '3000:3000'
