WIP add volume for db

--- a/docker-compose/data-service/docker-compose.yml
+++ b/docker-compose/data-service/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_DB: blockchain
     ports:
       - '5432:5432'
+    volumes:
+      - ./postgres-data:/var/lib/postgresql
   crawler:
     image: wavesplatform/blockchain-postgres-sync
     restart: always
