minor config fixes

--- a/docker-image/docker-compose.yml
+++ b/docker-image/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 services:
   waves-node:
     image: wavesplatform/waves-private-node
-    volumes:
-      - "./data:/opt/waves/data"
+#    volumes:
+#      - "./data:/opt/waves/data"
     ports:
       - "6869:6869"
       - "6860:6860"
@@ -12,7 +12,7 @@ services:
     environment:
       NODE_ADDRESS: waves-node:6869
     ports:
-      - "5432:5432"
+#      - "5432:5432"
       - "3010:3010"
     links:
       - waves-node
