--- a/kubernetes/helm/waves-data-service/templates/data-service-deployment.yaml
+++ b/kubernetes/helm/waves-data-service/templates/data-service-deployment.yaml
@@ -26,35 +26,41 @@ spec:
     spec:
       imagePullSecrets:
         - name: docker-registry-creds
+      initContainers:
+        - name: check-db-ready
+          image: postgres:{{ .Values.postgresql.imageTag }}
+          command: ['sh', '-c', 
+            'until pg_isready -h {{ template "postgresqlHost" . }} -p {{ .Values.postgresql.service.port }} -U postgres;
+            do echo waiting for database; sleep 2; done;']
       containers:
         - name: data-service
           image: {{ .Values.dataService.image }}:{{ .Values.dataService.imageTag }}
           imagePullPolicy: {{ .Values.dataService.imagePullPolicy }}
           env:
-            - name: DEFAULT_MATCHER
-              value: {{ .Values.dataService.defaultMatcherAddress }}
             - name: PGHOST
-              value: {{ template "postgresHost" . }}
+              value: {{ template "postgresqlHost" . }}
             - name: PGPORT
               value: {{ .Values.postgresql.service.port | quote }}
             - name: PGDATABASE
-              value: {{ .Values.postgresql.postgresDatabase }}
+              value: {{ .Values.postgresql.postgresqlDatabase }}
             - name: PGUSER
               valueFrom:
                 secretKeyRef:
-                  name: postgres-creds-{{ .Release.Name }}
+                  name: postgres-creds-reader-{{ .Release.Name }}
                   key: username
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-creds-{{ .Release.Name }}
+                  name: postgres-creds-reader-{{ .Release.Name }}
                   key: password
             - name: PGPOOLSIZE
               value: {{ .Values.dataService.pgPoolSize | quote }}
             - name: PORT
               value: {{ .Values.dataService.port | quote }}
+            - name: DEFAULT_MATCHER
+              value: {{ .Values.dataService.defaultMatcherAddress }}
             - name: DOCS_URL
-              value: '{{ .Values.apiHttpProtocol }}://{{ .Values.apiHost }}/docs/'
+              value: '{{ .Values.docs.url }}'
           livenessProbe:
             httpGet:
               path: /
