--- a/kubernetes/helm/waves-data-service/templates/pairs-deployment.yaml
+++ b/kubernetes/helm/waves-data-service/templates/pairs-deployment.yaml
@@ -23,26 +23,32 @@ spec:
     spec:
       imagePullSecrets:
         - name: docker-registry-creds
+      initContainers:
+        - name: check-db-ready
+          image: postgres:{{ .Values.postgresql.imageTag }}
+          command: ['sh', '-c', 
+            'until pg_isready -h {{ template "postgresqlHost" . }} -p {{ .Values.postgresql.service.port }} -U postgres;
+            do echo waiting for database; sleep 2; done;']
       containers:
         - name: pairs
           image: {{ .Values.dataService.pairs.image }}:{{ .Values.dataService.pairs.imageTag }}
           imagePullPolicy: {{ .Values.dataService.pairs.imagePullPolicy }}
           env:
             - name: PGHOST
-              value: {{ template "postgresHost" . }}
+              value: {{ template "postgresqlHost" . }}
             - name: PGPORT
               value: {{ .Values.postgresql.service.port | quote }}
             - name: PGDATABASE
-              value: {{ .Values.postgresql.postgresDatabase }}
+              value: {{ .Values.postgresql.postgresqlDatabase }}
             - name: PGUSER
               valueFrom:
                 secretKeyRef:
-                  name: postgres-creds-{{ .Release.Name }}
+                  name: postgres-creds-writer-{{ .Release.Name }}
                   key: username
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-creds-{{ .Release.Name }}
+                  name: postgres-creds-writer-{{ .Release.Name }}
                   key: password
             - name: PAIRS_UPDATE_INTERVAL
               value: {{ .Values.dataService.pairs.updateInterval | quote }}
