--- a/kubernetes/helm/waves-data-service/values.yaml
+++ b/kubernetes/helm/waves-data-service/values.yaml
@@ -10,7 +10,8 @@ postgresql:
 
   # PostgreSQL server host, only for remote PostgreSQL (postgresql.enabled=false)
   host: 'localhost'
-  port: 5432
+  service:
+    port: 5432
 
   # Database name
   postgresqlDatabase: 'mainnet'
