--- a/docker-compose/data-service/docker-compose.yml
+++ b/docker-compose/data-service/docker-compose.yml
@@ -42,3 +42,32 @@ services:
       MATCHER_SETTINGS_URL: https://matcher.wavesplatform.com/matcher/settings
     ports:
       - '3000:3000'
+  pairs:
+    image: wavesplatform/data-service-pairs
+    restart: always
+    depends_on:
+      - crawler
+    environment:
+      PGHOST: postgres
+      PGPORT: 5432
+      PGDATABASE: blockchain
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      LOG_LEVEL: info
+      PAIRS_UPDATE_INTERVAL: 2500
+      PAIRS_UPDATE_TIMEOUT: 20000
+  candles:
+    image: wavesplatform/data-service-candles
+    restart: always
+    depends_on:
+      - crawler
+    environment:
+      PGHOST: postgres
+      PGPORT: 5432
+      PGDATABASE: blockchain
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      LOG_LEVEL: info
+      CANDLES_UPDATE_INTERVAL: 2500
+      CANDLES_UPDATE_TIMEOUT: 20000
+      RECALCULATE_ALL_CANDLES_ON_START: "false"
